[package]
name = "strikes"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "strikes"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
serde = "1.0.208"
config = "0.14.0"
serde_json = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
async-trait = "0.1.81"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = "3.1.2"
